[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://player/TopDownPlayer.gd" type="Script" id=2]
[ext_resource path="res://assets/weirdcone.png" type="Texture" id=3]
[ext_resource path="res://assets/dialogfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/style9_active.png" type="Texture" id=5]
[ext_resource path="res://assets/Attack02.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/Hurt02.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/Attack03.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 3 ), SubResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "aim",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "stab",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 17.8448

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 12, 6 )

[sub_resource type="CircleShape2D" id=12]
radius = 36.0

[node name="TopDownPlayer" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 3, 3 )
frames = SubResource( 6 )
animation = "die"
offset = Vector2( 0, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 2000, 0 )

[node name="Gun" type="Position2D" parent="."]
position = Vector2( 36, 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
shadow_enabled = true

[node name="Knife" type="Area2D" parent="."]
visible = false
position = Vector2( 24, -9 )
z_index = 10
monitoring = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="Knife"]
rotation = 1.5708
scale = Vector2( 3, 3 )
frames = SubResource( 10 )
offset = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Knife"]
position = Vector2( 12, 0 )
shape = SubResource( 11 )

[node name="Interact" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
shape = SubResource( 12 )

[node name="TalkPrompt" type="NinePatchRect" parent="."]
visible = false
margin_left = -10.0
margin_top = 32.0
margin_right = 10.0
margin_bottom = 56.0
texture = ExtResource( 5 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TalkPrompt"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "E"
align = 1
valign = 1

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="GunSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="KnifeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="Knife" to="." method="_on_Knife_body_entered"]
[connection signal="area_entered" from="Interact" to="." method="_on_Interact_area_entered"]
[connection signal="area_exited" from="Interact" to="." method="_on_Interact_area_exited"]
